--- a/locales/bn-BD.json
+++ b/locales/bn-BD.json
@@ -371,6 +371,10 @@
     "setting-otr-enable": null,
     "setting-receipts-enable": null,
     "setting-vcard-avatar-enable": null,
+    "setting-pep-avatar-enable" : null,
+    "no_avatar": null,
+    "xep84disabled": null,
+    "Add_PEPAvatar" : null,
     "setting-ping-enable": null,
     "Test": null,
     "this_device": null,
