add Tags to Roster Item Option "showTags" (true|false default: false)

--- a/locales/bn-BD.json
+++ b/locales/bn-BD.json
@@ -373,6 +373,7 @@
     "setting-vcard-avatar-enable": null,
     "setting-ping-enable": null,
     "Test": null,
+    "no_groups": null,
     "this_device": null,
     "Verification": null,
     "Webcam": null,
