--- a/locales/en.json
+++ b/locales/en.json
@@ -374,6 +374,7 @@
     "setting-vcard-avatar-enable": "Use vCard to get nice and shiny avatars from your contacts.",
     "setting-ping-enable": "Reply to server pings. May help if you keep getting disconnected from the server.",
     "Test": "Test",
+    "no_groups": "no Tags available",
     "this_device": "this device",
     "Verification": "Verification",
     "Webcam": "Webcam",
