XEP 191 Blocking Commands - Add menu to manage block list
- Todo: create handler to handle results from managed jids to
  > enable/disable (un)blocked Buddys in Roster
  > disable the ability to write in allready opened Chatwindows if blocked

--- a/locales/bn-BD.json
+++ b/locales/bn-BD.json
@@ -41,6 +41,8 @@
     "Authentication": null,
     "Message": null,
     "Add_buddy": null,
+    "Blocking_users": null,
+    "muc_one_jid_per_line": null,
     "rename_buddy": null,
     "delete_buddy": null,
     "Login": null,
