--- a/locales/en.json
+++ b/locales/en.json
@@ -41,6 +41,8 @@
     "Authentication": "Authentication",
     "Message": "Message",
     "Add_buddy": "Add contact",
+    "Blocking_users": "Block contacts",
+    "muc_one_jid_per_line": "One JID per line",
     "rename_buddy": "rename contact",
     "delete_buddy": "delete contact",
     "Login": "Login",
